<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif"
            android:padding="20dp"
            android:text="@string/tittle"
            android:textColor="#F50057"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:hint="Name:"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Question1"
            android:textColor="#304FFE"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/ques1_ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#304FFE"
            android:text="@string/Question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Activity.xml"
                android:onClick="onRB2Click"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRB2Click"
                android:text="@string/Translation.xml"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRB2Click"
                android:text="@string/MainActivity.xml"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRB2Click"
                android:text="@string/Styles.xml"
                android:textAppearance="?android:textAppearanceSmall" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#304FFE"
            android:text="@string/Question3" />

        <CheckBox
            android:id="@+id/checkB1_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="onCB3Click"
            android:text="@string/intDatapassed"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkB2_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="onCB3Click"
            android:text="@string/stringourCompanyName"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkB3_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="onCB3Click"
            android:text="@string/intdisplayQuantity"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkB4_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="onCB3Click"
            android:text="@string/StringnameOfQualifiedStaff"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="#304FFE"
            android:text="@string/Question4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first"
                android:onClick="onRB4Click"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/q4radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:onClick="onRB4Click"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/q4radio_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third"
                android:onClick="onRB4Click"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/q4radio_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rightAnswer"
                android:onClick="onRB4Click"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="100dp"
            android:onClick="submitAnswers"
            android:padding="8dp"
            android:text="@string/buttonText" />

    </LinearLayout>
</ScrollView>